crates/plotnik-tests/tests/macro_ui/fail/query_syntax_error.stderr
error: missing closing `)`
         |
       2 |       Q = (program
         |           ^ node started here
         |  _________|
         | |
       3 | |       (expression_statement (identifier) @id)
       4 | |
         | |____^
         |
       help: add `)` to close the node
 --> tests/macro_ui/fail/query_syntax_error.rs:6:5
  |
6 | /     r#"
7 | |     Q = (program
8 | |       (expression_statement (identifier) @id)
9 | |     "#
  | |______^
